--- a/.github/workflows/main_mukaida-sample.yml
+++ b/.github/workflows/main_mukaida-sample.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP app to Azure Web App - mukaida-sample
+name: mukaida-sample
 
 on:
   push:
@@ -15,37 +15,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+          
       - name: Setup MSBuild path
-        uses: microsoft/setup-msbuild@v1.0.2
+        uses: microsoft/setup-msbuild@v2
 
+      # Nuget
       - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.5
-
-      - name: Restore NuGet packages
+        uses: NuGet/setup-nuget@v2
+        
+      - name: Restore NuGet packages for service
         run: nuget restore
 
       - name: Publish to folder
-        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: ASP-app
-          path: '/published/**'
-
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: ASP-app
+        run: msbuild 'ASPNET_Sample.csproj' /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +35,5 @@ jobs:
         with:
           app-name: 'mukaida-sample'
           slot-name: 'Production'
-          package: .
+          package: '/published'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B320B56BF99D49D88E06DDB00614FDEC }}
