--- a/.github/workflows/main_mukaida-sample.yml
+++ b/.github/workflows/main_mukaida-sample.yml
@@ -27,7 +27,7 @@ jobs:
         run: nuget restore
 
       - name: Publish to folder
-        run: msbuild 'ASPNET_Sample.csproj' /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+        run: msbuild 'ASPNET_Sample/ASPNET_Sample.csproj' /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
